<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/CrashView"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FF9900"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <!-- for testing, do not remove -->
            <TextView
                android:id="@+id/bugButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text=""
                android:visibility="gone"
                android:textSize="1sp"/>

            <TextView
                android:id="@+id/bugButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text=""
                android:visibility="gone"
                android:textSize="1sp"/>

            <TextView
                android:id="@+id/bugButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text=""
                android:visibility="gone"
                android:textSize="1sp"/>
            <!-- for testing, do not remove -->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"/>

            <ImageView
                android:id="@+id/bugButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1.4"
                android:paddingBottom="20dp"
                android:src="@drawable/bug_icon_large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="TRIfA crashed"
                android:textColor="#ff101010"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="press to restart TRIfA"
                android:textColor="#ff101010"
                android:textSize="20sp"/>

            <LinearLayout
                android:id="@+id/send_report_container"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageButton
                    android:id="@+id/send_report_button_01"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="0dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:src="@drawable/about_icon_email"/>

                <Button
                    android:id="@+id/send_report_button_02"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="send Crashreport via Email"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="send Crashreport after restart\non the 'Maintenance Page'"
                    android:textColor="#dd101010"
                    android:textSize="16sp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>