...
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/password_1_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/layout___password"
                    android:imeOptions="flagNoPersonalizedLearning"
                    android:inputType="textPassword"
                    android:maxLines="1"
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/set_button_2"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="25"
                    android:text="@string/layout___unlock"
...
